# AI-powered-immigration-guidance-system

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  DESIGN.md  LICENSE  PROGRESS.md  PROTOCOL.md  README.md  REBUILD_HANDOVER.md  amplify.yml  apprunner.yaml  dev.sh
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: Dockerfile  Dockerfile.deploy  pyproject.toml  requirements.txt  start.sh
backend/src/api/: main.py
backend/src/core/: config.py  llm.py  types.py
backend/src/orchestration/: agent_graph.py  agent_suggester.py  context_engine.py  dynamic_journey.py  graph_engine.py  handoff_generator.py  loader.py  pipeline.py  router.py  slot_filler.py  slot_manager.py
backend/src/retrieval/: README.md  answer_generator.py  embeddings.py  faithfulness_check.py  index.py  ingest.py  search.py  web_search.py
backend/tests/: conftest.py  test_graph_engine.py  test_loader.py  test_pipeline.py  test_router.py  test_web_search.py
backend/tests/fixtures/journeys/: _ignored.json  address_registration.json  german_course.json  housing_search.json  school_childcare.json
docs/: README.md  architecture.md  pitch.md  privacy.md
frontend/: .env.example  .gitignore  DEPLOY_VERCEL.md  Dockerfile  package-lock.json  package.json
frontend/lib/: api.ts  (+1 more)
infra/: README.md  apprunner-backend.yaml  apprunner-frontend.yaml  deploy.sh
(+51 files in other folders)
