[project]
name = "integreat-compass-backend"
version = "0.1.0"
description = "Journey-based immigration guidance system — backend (orchestration + retrieval)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
    "openai>=1.30",
    # Retrieval track (Track B / Daril) — heavy ML deps, install when needed:
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "beautifulsoup4>=4.12",
    # Agent (LangGraph reasoning agent with tools + memory):
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "langchain-core>=1.0",
    # Web-search tool (agent fallback when the corpus is insufficient):
    "ddgs>=9.0",
]

[project.optional-dependencies]
# Minimal set to boot the API/mock without pulling torch + sentence-transformers.
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "jsonschema>=4.21",
    "openai>=1.30",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

# Run from repo root:
#   uvicorn api.main:app --app-dir backend/src --reload
# (backend/src is the import root, so modules import as `core.*`, `api.*`, etc.)
